* Added wants_sms, wants_calls, wants_direct_mail to contact proxy model.
* Added attr_accessor calls back into the contact proxy model.
* Added the scheduled payment proxy model.
* Added skip and unskip methods to the company subscription proxy model.
* Added company_subscription list, find and update methods.
* Updated appointment proxy model list method to use collection.
* Added company_transaction proxy model.
* Added the company_subscription create method

=== 0.4.0 2013-12-10
* Updated appointment proxy model list method to use collection.
* Added missing requires in lobbyist.rb.
* Slowly adding back attr_accessor calls. Review confimation accessors added here.
* Added the review confirmation child attribute to the review proxy model.

=== 0.3.39 2013-11-12

* Removed average_changed field from company.
* Removed transaction receipt fields from the Company proxy model.
* Added contact transcribe_allowed api call.
* Removed admin_user_id from MemberCall.list arguments.
* Removing field average_changed from company.

=== 0.3.38 2013-10-28

* Added insufficient_handwritten_credits endpoint to the contact proxy model.
* Added handwritten_review_credit proxy model.
* Added Company list method.
* Removed unnecessary CGI escape of message.
* Removed CompanyUser attributes.
* Adding company id parameter for Contact update call.
* Adding company id parameter for CustomerCall, EmailInvitation and Contact create calls.
* Removed the syndicate attribute from the Company proxy model.
* Added free_trials proxy model
* Added handwritten_reviews proxy model
* Altered ChallengeCommunication to use Lobbyist ReviewChallenge reference.
* Added metrics proxy model
* Adding company id parameter for Contact update call.
* Adding company id parameter for CustomerCall, EmailInvitation and Contact create calls.
* Removed the syndicate attribute from the Company proxy model.

=== 0.3.37 2013-10-03
