@@ -21,7 +21,7 @@ require 'lobbyist/error/service_unavailable'
 require 'lobbyist/error/unauthorized'
 require 'lobbyist/error/unprocessable_entity'
 
-# Library
+# Library V1
 require 'lobbyist/base'
 require 'lobbyist/account_level'
 require 'lobbyist/admin_performance_event'
@@ -67,14 +67,27 @@ require 'lobbyist/suggestion_topic'
 require 'lobbyist/termination_notice'
 require 'lobbyist/topic'
 require 'lobbyist/version'
+require 'lobbyist/workflow_system'
 
+# Library V2
+require 'lobbyist/v2/base'
+require 'lobbyist/v2/authorization'
+require 'lobbyist/v2/company_user'
+require 'lobbyist/v2/company'
+require 'lobbyist/v2/contact'
+require 'lobbyist/v2/data_upload'
+require 'lobbyist/v2/enterprise_setting'
+require 'lobbyist/v2/enterprise_user'
+require 'lobbyist/v2/enterprise'
+require 'lobbyist/v2/scotty_setting'
+require 'lobbyist/v2/workflow_system'
 
 module Lobbyist
-  
+
   @@api_base = 'http://localhost:3000'
   @@api_key = nil
   @@api_secret = nil
-  
+
   def self.api_base
     @@api_base
   end
@@ -82,27 +95,27 @@ module Lobbyist
   def self.api_base=(base)
     @@api_base = base
   end
-  
+
   def self.api_key
     @@api_key ||= ENV['LOBBYIST_API_KEY']
   end
-  
+
   def self.api_key=(key)
     @@api_key = key
   end
-  
+
   def self.api_secret
     @@api_secret ||= ENV['LOBBYIST_API_SECRET']
   end
-  
+
   def self.api_secret=(secret)
     @@api_secret = secret
   end
-  
+
   def self.http
     @@connection ||= Faraday.new(:url => @@api_base) do |faraday|
-      faraday.request  :url_encoded             #for GET params
-      faraday.request  :json                    #for PUT/POST params
+      faraday.request  :url_encoded             # for GET params
+      faraday.request  :json                    # for PUT/POST params
       faraday.adapter  Faraday.default_adapter  # make requests with Net::HTTP
     end
   end
