@@ -1,0 +1,8 @@
+module Lobbyist
+  module V2
+    
+    class Urls < Lobbyist::V2::Base
+    end
+    
+  end
+end
