@@ -1,3 +1,5 @@
+* Added API V2 support.
+* Added attr_accessor attributes back to V1 models.
 * Added wants_sms, wants_calls, wants_direct_mail to contact proxy model.
 * Added attr_accessor calls back into the contact proxy model.
 * Added the scheduled payment proxy model.
